# capstone_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RL_Integration_Plan.md  agent_log.md  codebase_analysis.md  feature_plan.md  main.cpp  v1_analysis.md
.cursor/rules/: v1-architecture.mdc  v1-code-issues.mdc  v1-dependencies.mdc  v1-future-direction.mdc  v1-llm-integration.mdc
MaiMail/: curses-ui.py  draft.py
api/: main.py  pyproject.toml  requirements.txt
cpp/: CMakeLists.txt  main.cpp
experiments/python-ui/: curses-ui.py  curses-ui2.py  textual-ui.py
experiments/summarizer/: summarizer.py
gmail-api/: api.py
gmail-api/resources/: tools.json
gmail-microservice/: gmail_service.py  pyproject.toml
gmail-microservice/gmail_microservice.egg-info/: SOURCES.txt  requires.txt
inc/: DatabaseManager.h  LlamaInference.h  McpClient.hpp  python_bindings.hpp  tool_manager.hpp
llama-cli/: llama-cli  llama-cli-wrapper.cpp  llama-cli-wrapper.h
llama.cpp-backend/: CMakeLists.txt  LlamaInference.cpp  LlamaInference.h  main.cpp
old/: main.cpp
src/: DatabaseManager.cpp  LlamaInference.cpp  Logger.cpp  McpClient.cpp  main.cpp  python_bindings.cpp  test_database.cpp  tool_manager.cpp
v1/: CMakeLists.txt
v1.1/: CMakeLists.txt  README.md
v1.1/gmail-microservice/: gmail_service.py
v1.1/gmail-microservice/gmail_microservice.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
v1.1/inc/: LlamaInference.h
v1.1/old/temp/: main.cpp
v1.1/src/: LlamaInference.cpp  main.cpp
v1/gmail-api/: api.py
v1/gmail-api/api.egg-info/: PKG-INFO  SOURCES.txt
v1/gmail-microservice/: gmail_service.py
v1/gmail-microservice/gmail_microservice.egg-info/: requires.txt
v1/inc/: tool_manager.hpp
v1/old/: main.cpp
v1/src/: main.cpp  tool_manager.cpp
v1/test/: test_tool_manager.cpp
v2/: CMakeLists.txt  README.md
v2/include/: LlamaInference.h  Logger.h
v2/src/: LlamaInference.cpp  chat.cpp  terminal_ui.cpp
v2/test/: CMakeLists.txt  llama_inference_test.cpp
