[project]
name = "gmail-microservice"
version = "0.1.0"
description = "Gmail API Microservice"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-api-python-client",
    "python-multipart",
    "pydantic[email]"
]

[tool.uv]
